# gm-cli

./: Cargo.toml  README.md
src/: command.rs  error.rs  lib.rs  main.rs
src/commands/: mod.rs
src/commands/accounts/: create.rs  delete.rs  login.rs  logout.rs  mod.rs  regen.rs  rename.rs  status.rs
src/commands/jobs/: jobs.rs  mod.rs  unqueue.rs
src/commands/storage/: cat.rs  cp.rs  fs.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  read.rs  rm.rs  touch.rs  upload.rs  vis.rs
src/commands/tex/: compile.rs  mod.rs  pfpedit.rs  profile.rs  publish.rs  publishes.rs  set_profile.rs
src/commands/utils/: clean.rs  help.rs  mod.rs  version.rs
src/config/: account.rs  applications.rs  mod.rs
src/functions/: args_parse.rs  diritem_tostring.rs  display.rs  display_publish_item.rs  map_args.rs  mod.rs  path.rs  prompt.rs  request.rs  yes.rs
src/traits/: config.rs  mod.rs  types.rs
