[package]
name = "gm-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# goodmorning-bindings = {path = "../goodmorning-bindings", features = ["services-v1", "req-ser", "res-de"], version = "*"}
goodmorning-bindings = {git = "https://github.com/goodmorning-network/rust-bindings", rev = "faf8b58", features = ["services-v1", "req-ser", "res-de"], version = "*"}
reqwest = {version = "0.11", features = ["blocking", "json"]}
dirs = "5.0"
serde = {version = "1", features = ["derive"]}
serde_yaml = "0.9"
simplelog = "0.12"
log = "0.4"
