[package]
name = "gm-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# goodmorning-bindings = {path = "../rust-bindings", version = "*"}
goodmorning-bindings = {git = "https://github.com/goodmorning-network/rust-bindings", rev = "2978549"}
reqwest = {version = "0.11", features = ["blocking", "json", "multipart"]}
dirs = "5.0"
serde = {version = "1", features = ["derive"]}
serde_yaml = "0.9"
simplelog = "0.12"
log = "0.4"
rpassword = "7.2"
chrono = "0.4"
singlyton = "4.1"
serde_json = "1.0"
execute = "0.2"
